# cozy-lapce

./: .gitignore  .rustfmt.toml  Cargo.toml  Makefile.toml  README.md  README.zh-CN.md  docker-bake.hcl
.github-backup/workflows/: release.yml
.github/workflows/: ci.yml  linux.yml  release.yml
crates/: README.md  rust-build.md
crates/ansi-to-style/: Cargo.toml
crates/ansi-to-style/src/: lib.rs
crates/cozy-floem/: Cargo.toml
crates/cozy-floem/src/: channel.rs  lib.rs
crates/cozy-floem/src/views/: drag_line.rs  mod.rs  panel.rs
crates/cozy-floem/src/views/panel/: data.rs  view.rs
crates/cozy-floem/src/views/panel/data/: cursor.rs  lines.rs
crates/cozy-floem/src/views/tree_with_panel/: data.rs  mod.rs  view.rs
crates/doc/: Cargo.toml
crates/doc/src/: config.rs  diagnostic.rs  language.rs  lens.rs  lib.rs
crates/doc/src/lines/: action.rs  char_buffer.rs  command.rs  cursor.rs  delta_compute.rs  diff.rs  edit.rs  editor_command.rs  encoding.rs  fold.rs  fold_new.rs  indent.rs  layout.rs  line.rs  line_ending.rs  mod.rs  mode.rs  movement.rs  paragraph.rs  phantom_text.rs  register.rs  screen_lines.rs  selection.rs  signal.rs  soft_tab.rs  style.rs  text.rs  util.rs  word.rs
crates/doc/src/lines/buffer/: diff.rs  mod.rs  rope_text.rs  test.rs
crates/doc/src/lines/line/: mod.rs  update_lines.rs
crates/doc/src/syntax/: edit.rs  highlight.rs  mod.rs  util.rs
crates/doc/tests/: test_all.rs  test_delta.rs  test_folded_line_click.rs  test_folding.rs  test_line.rs  test_lines.rs  test_lines_move.rs  test_phantom.rs  test_phantom_merge.rs
crates/doc/tests/lines_util/: _init.rs  mod.rs  semantic.rs  util.rs
crates/doc/tests/other/: test_lines.rs
crates/doc/tests/tests/: mod.rs  test_diff.rs  test_folded_line_click.rs  test_line.rs  test_lines_move.rs  test_phantom_merge.rs
crates/doc/tests/tests/lines_util/: _init.rs  init_main_2.rs  mod.rs  semantic.rs  util.rs
crates/rust-resolve/: Cargo.toml
crates/rust-resolve/src/: async_command.rs  lib.rs  sync_command.rs
defaults/: dark-theme.toml  icon-theme.toml  jb-light-theme.toml  jetbrains-light-theme.toml  keymaps-common.toml  light-theme.toml
docs/: DEVELOPING.md  USAGE.md
examples/: cozy-rust-panel.rs  cozy-rust-tree-panel-sync.rs  cozy-rust-tree-panel.rs  cozy-simple-panel.rs  folding-svg.rs  font-style.rs  resolve_path.rs  simple-ansi-to-style.rs
extra/linux/: dev.cozy.lapce.desktop  dev.cozy.lapce.metainfo.xml
extra/linux/docker/debian/: Dockerfile
extra/linux/docker/fedora/: Dockerfile
extra/linux/docker/ubuntu/: Dockerfile
extra/schemas/: color-theme.json
extra/windows/wix/: cozy-lapce.wxs
lapce-app/: Cargo.toml
lapce-app/src/: about.rs  alert.rs  app.rs  code_action.rs  code_lens.rs  command.rs  completion.rs  config.rs  db.rs  debug.rs  doc.rs  editor.rs  editor_tab.rs  find.rs  focus_text.rs  global_search.rs  history.rs  hover.rs  id.rs  inline_completion.rs  keymap.rs  keypress.rs  lib.rs  listener.rs  log.rs  lsp.rs  main_split.rs  markdown.rs  palette.rs  plugin.rs  proxy.rs  rename.rs  settings.rs  snippet.rs  source_control.rs  status.rs  text_area.rs  text_input.rs  title.rs  update.rs  (+6 more)
lapce-app/src/app/: grammars.rs  logging.rs  mod.rs
lapce-app/src/common/: call_back.rs  head.rs  mod.rs
lapce-app/src/config/: color.rs  color_theme.rs  core.rs  editor.rs  icon.rs  icon_theme.rs  mod.rs  signal.rs  svg.rs  terminal.rs  ui.rs  watcher.rs
lapce-app/src/editor/: diff.rs  editor.rs  floem_editor.rs  gutter.rs  gutter_new.rs  location.rs  mod.rs  movement.rs  view.rs
lapce-app/src/editor/gutter_new/: view.rs
lapce-app/src/file_explorer/: data.rs  node.rs  view.rs
lapce-app/src/keypress/: condition.rs  key.rs  keymap.rs  loader.rs  mod.rs  press.rs
lapce-app/src/local_task/: handler.rs  mod.rs  requester.rs
lapce-app/src/main_split/: editors.rs  mod.rs
lapce-app/src/palette/: item.rs  kind.rs  mod.rs
lapce-app/src/panel/: call_hierarchy_view.rs  data.rs  debug_view.rs  document_symbol.rs  global_search_view.rs  implementation_view.rs  kind.rs  mod.rs  plugin_view.rs  position.rs  problem_view.rs  references_view.rs  rust_build_panel.rs  source_control_view.rs  style.rs  terminal_view.rs  view.rs
lapce-app/src/proxy/: mod.rs  remote.rs  ssh.rs  wsl.rs
lapce-app/src/terminal/: data.rs  event.rs  mod.rs  panel.rs  raw.rs  tab.rs  view.rs
lapce-app/tests/: test_all.rs
lapce-app/tests/other/: test_lines.rs
lapce-app/tests/tests/: mod.rs  test_cursor_position.rs  test_cursor_selection.rs  test_diff.rs  test_document_symbol.rs  test_folded_line_click.rs  test_get_folded_index.rs  test_lines_move.rs  test_phantom_merge.rs  test_rope_cursor.rs  test_visual_line_info_of_buffer_offset.rs
lapce-app/tests/tests/lines_util/: _init.rs  init_main_2.rs  init_main_4.rs  mod.rs  semantic.rs
lapce-core/: Cargo.toml  build.rs
lapce-core/src/: debug.rs  directory.rs  doc.rs  editor_tab.rs  encoding.rs  icon.rs  id.rs  lens.rs  lib.rs  main_split.rs  meta.rs  panel.rs  rope_text_pos.rs  style.rs  workspace.rs
lapce-proxy/: Cargo.toml
lapce-proxy/src/: buffer.rs  cli.rs  dispatch.rs  lib.rs  rust_build.rs  rust_module_resolve.rs  terminal.rs  watcher.rs
lapce-proxy/src/plugin/: catalog.rs  dap.rs  lsp.rs  mod.rs  psp.rs  wasi.rs
lapce-proxy/src/plugin/wasi/: tests.rs
lapce-proxy/src/rust_module_resolve/: resolve_path.rs
lapce-rpc/: Cargo.toml
lapce-rpc/src/: buffer.rs  core.rs  dap_types.rs  file.rs  file_line.rs  lib.rs  parse.rs  plugin.rs  proxy.rs  rust_module_resolve.rs  source_control.rs  stdio.rs  style.rs  terminal.rs
resources/test_code/: editor.rs  main.rs  main_2.rs  main_3.rs  main_4.rs  test.rs
resources/test_code/diff_test/: test.rs  test_new.rs
resources/test_code/diff_test_1/: test_1.rs  test_1_new.rs
