[package]
name = "doc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde             = {workspace = true}
serde_json        = {workspace = true}

lsp-types = {workspace = true}
im                = {workspace = true}
smallvec          = {workspace = true}
itertools = {workspace = true}
slotmap     = {workspace = true}
tree-sitter = {workspace = true}
ahash       = {workspace = true}
hashbrown   = {workspace = true}
regex             = {workspace = true}
strum             = {workspace = true}
strum_macros      = {workspace = true}
thiserror         = {workspace = true}
libloading  = {workspace = true}
directories       = {workspace = true}
arc-swap    = {workspace = true}
log = {workspace = true}
anyhow            = {workspace = true}
memchr = {workspace = true}
unicode-segmentation = {workspace = true}
bitflags = {workspace = true}
lapce-xi-rope = {workspace = true}
floem = {workspace = true}
cosmic-text = {workspace = true}


[dev-dependencies]
custom-utils = "0.10.17"

#[build-dependencies]
#anyhow            = { version = "1.0" }
#custom-utils = "0.10.16"
#floem = { path="../floem" }

#[patch.crates-io]
#custom-utils = {path = "../custom-utils"}
##floem = { path="../floem-lapce" }
#
#[patch."https://github.com/jm-observer/xi-editor.git"]
#lapce-xi-rope = {path = "../xi-editor"}
#[patch."https://github.com/jm-observer/floem.git"]
#floem = { path="../floem" }
